--- a/web1/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/web1/src/app/inventory/physical-stock/physical-stock.component.html
@@ -23,6 +23,16 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
+                                <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Barcode</mat-label>
+                                        <input matInput name="ProductSearch" [(ngModel)]="data.ProductSearch"
+                                            #ProductSearchcontrol>
+                                        <mat-error>
+                                            ProductSearch required
+                                        </mat-error>
+                                    </mat-form-field>
+                                </div>
                                 <div class="col-xxl-4 col-xl-4 col-lg-5 col-md-6 col-12  mb-sm-0 ">
                                     <button type="submit" mat-raised-button color="primary">Search</button>
                                     <button type="submit" mat-raised-button color="warn" class="ms-3 me-3">Reset</button>
