--- a/web1/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/web1/src/app/inventory/physical-stock/physical-stock.component.html
@@ -1,4 +1,3 @@
-
 <section class="content">
     <div class="container-fluid">
         <div class="block-header"> </div>
@@ -6,14 +5,27 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
                 <div class="card">
                     <div class="header">
-                        <h2>Physical Stock 
-                            </h2>
+                        <h2>Physical Stock</h2>
                     </div>
                     <div class="body">
                         <!-- form start -->
-                        <form #f="ngForm" autocomplete="off"  >
+                        <form #f="ngForm" autocomplete="off">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
+                                <div class="col-xl-1 col-lg-4 col-md-6 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Total Available Qty</mat-label>
+                                        <input matInput name="totalAvailableQty" value="{{this.totalAvailableQty}}"
+                                            #totalAvailableQtycontrol disabled style="color: rgb(37, 139, 47); font-weight: 600;    font-size: 1.25rem;">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-4 col-md-6 col-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Total Physical Qty</mat-label>
+                                        <input matInput name="totalPhysicalQty" value="{{this.totalPhysicalQty}}"
+                                            #totalPhysicalQtycontrol disabled style="color: red; font-weight: 600;    font-size: 1.25rem;">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-1 col-lg-4 col-md-6 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
                                         <input matInput name="Barcode" (blur)="barcodeScan()" [(ngModel)]="Barcode"
@@ -23,29 +35,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                    <mat-form-field class="example-full-width mb-0"
-                                        *ngIf="user.UserGroup === 'CompanyAdmin'">
-                                        <mat-label>ShopName</mat-label>
-                                        <mat-select name="ShopID" [(ngModel)]="data.ShopID" >
-                                            <!-- <mat-option [value]=0>All</mat-option> -->
-                                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
-                                                <span [style.color]="'blue'"
-                                                    *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
-                                            </mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
-                                    <mat-form-field class="example-full-width mb-0"
-                                        *ngIf="user.UserGroup !== 'CompanyAdmin'">
-                                        <mat-label>ShopName</mat-label>
-                                        <mat-select name="ShopID" [(ngModel)]="data.ShopID">
-                                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
-                                                <span [style.color]="'blue'"
-                                                    *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
-                                            </mat-option>
-                                        </mat-select>
-                                    </mat-form-field>
-                                </div>
+                              
                                 <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product Search</mat-label>
@@ -56,19 +46,18 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                               
+
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0 paddingInp">
                                         <mat-label>Select Product</mat-label>
                                         <mat-select name="ProductCategory" [(ngModel)]="data.ProductCategory"
                                             (selectionChange)="getFieldList()" required #Typecontrol>
                                             <mat-option>
-                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue" >
+                                                <ngx-mat-select-search matInput [(ngModel)]="searchValue">
                                                 </ngx-mat-select-search>
                                             </mat-option>
                                             <mat-option [value]=0>All</mat-option>
-                                            <mat-option *ngFor="let prod of prodList  let i = index;"
-                                                [value]="prod.ID">
+                                            <mat-option *ngFor="let prod of prodList  let i = index;" [value]="prod.ID">
                                                 {{prod.Name | uppercase}}
                                             </mat-option>
                                         </mat-select>
@@ -83,12 +72,11 @@
                                     <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
                                         <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
                                             <mat-label>{{spec.FieldName}}</mat-label>
-                                            <mat-select name="{{spec.FieldName+'0'}}"
-                                                [(ngModel)]="spec.SelectedValue"
+                                            <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
                                                 (selectionChange)="getFieldSupportData(i)" editable="true"
                                                 [required]="spec.Required === 1" #singleSelect>
                                                 <mat-option>
-                                                    <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" >
+                                                    <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue">
                                                     </ngx-mat-select-search>
                                                 </mat-option>
                                                 <mat-option>
@@ -127,16 +115,28 @@
                                     </div>
                                     <div *ngIf="spec.FieldType === 'boolean'" class="d-flex">
                                         <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary"
-                                            class="example-margin" #Multiplecontrolx
-                                            [(ngModel)]="spec.SelectedValue">
+                                            class="example-margin" #Multiplecontrolx [(ngModel)]="spec.SelectedValue">
                                             {{spec.FieldName}}</mat-slide-toggle>
                                     </div>
                                 </div>
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>ShopName</mat-label>
+                                        <mat-select name="ShopID" [(ngModel)]="data.ShopID" disabled>
+                                            <!-- <mat-option [value]=0>All</mat-option> -->
+                                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                                                <span [style.color]="'blue'"
+                                                    *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                                            </mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xxl-3 col-xl-3 col-lg-5 col-md-6 col-12  mb-sm-0 ">
+                                    <button type="button" mat-raised-button color="primary"
+                                        (click)="getList()">Search</button>
+                                    <button type="button" mat-raised-button color="warn" class="ms-3 me-3"
+                                        (click)="reset()">Reset</button>
 
-                                <div class="col-xxl-4 col-xl-4 col-lg-5 col-md-6 col-12  mb-sm-0 ">
-                                    <button type="button" mat-raised-button color="primary" (click)="getList()" >Search</button>
-                                    <button type="button" mat-raised-button color="warn" class="ms-3 me-3" (click)="reset()">Reset</button>
-                                  
                                 </div>
                             </div>
                         </form>
@@ -145,32 +145,33 @@
                         <form #f2="ngForm" (ngSubmit)="onSubmit()">
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 450px;">
-                                        <table class="table table-responsive table-striped table-hover table-sm table-bordered"
-                                            style="border: 2px solid #fff !important;">
-                                            <thead>
-                                                <tr style="white-space: nowrap;">
-                                                    <th>S No.</th>
-                                                    <th>Available</th>
-                                                    <th>Physical Ava</th>
-                                                    <th>Barcode</th>
-                                                    <th>Product Category</th>
-                                                    <th>Product Name</th>
-                                                    <!-- <th>BrandType</th>
+                                    <table
+                                        class="table table-responsive table-striped table-hover table-sm table-bordered"
+                                        style="border: 2px solid #fff !important;">
+                                        <thead>
+                                            <tr style="white-space: nowrap;">
+                                                <th>S No.</th>
+                                                <th>Available</th>
+                                                <th>Physical Ava</th>
+                                                <th>Barcode</th>
+                                                <th>Product Category</th>
+                                                <th>Product Name</th>
+                                                <!-- <th>BrandType</th>
                                                     <th>PurchaseDate</th>
                                                     <th>Quantity</th> -->
-                                                    <th>Current Shop</th>
-                                                    <th>Status</th>
-                                                    <th>Supplier</th>
-                                                    <!-- <th>Unit Price</th>
+                                                <th>Current Shop</th>
+                                                <th>Status</th>
+                                                <th>Supplier</th>
+                                                <!-- <th>Unit Price</th>
                                                     <th>Dis%</th>
                                                     <th>TAX%</th>
                                                     <th>TAX Type</th> -->
-                                                    <th>Retail Price</th>
-                                                    <th>WholeSale Price</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody class="text-center">
-                                               <tr *ngFor="let data of dataList; let i = index" text="left">
+                                                <th>Retail Price</th>
+                                                <th>WholeSale Price</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="text-center">
+                                            <tr *ngFor="let data of dataList; let i = index" text="left">
                                                 <td>{{ i + 1 }}</td>
                                                 <td>{{ data.Available }}</td>
                                                 <td>{{ data.PhysicalAvailable }}</td>
@@ -189,9 +190,9 @@
                                                 <td>-</td> -->
                                                 <td>{{ data.RetailPrice }}</td>
                                                 <td>{{ data.WholeSalePrice }}</td>
-                                               </tr>
-                                            </tbody>
-                                        </table>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                                 <!-- <div  class="col-sm-12 mx-auto" *ngIf="dataList.length != 0">
                                     <table id="print-content" class="table table-striped table-hover table-sm table-bordered"
@@ -205,7 +206,8 @@
                                     </table>
                                 </div> -->
                             </div>
-                            <div class="row" *ngIf="dataList?.length != 0" style=" border: red solid 2px;padding: 0;margin: 0; padding-top: 1rem;" >
+                            <div class="row" *ngIf="dataList?.length != 0"
+                                style=" border: red solid 2px;padding: 0;margin: 0; padding-top: 1rem;">
                                 <div class="col-xl-1 col-lg-2 col-md-3 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Total Available Qty</mat-label>
@@ -233,17 +235,17 @@
                                 <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Remark</mat-label>
-                                        <input matInput name="Remark" [(ngModel)]="master.Remark"
-                                            #Remarkcontrol>
+                                        <input matInput name="Remark" [(ngModel)]="master.Remark" #Remarkcontrol>
                                         <mat-error>
                                             Remark required
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xxl-4 col-xl-4 col-lg-5 col-md-6 col-12  mb-sm-0 ">
-                                    <button type="submit" mat-raised-button color="primary" *ngIf="id == 0" [disabled]="!f2.valid">Save</button>
-                                    <button type="button" mat-raised-button color="primary" *ngIf="id != 0" class="ms-3 me-3">Update</button>
-                                  
+                                    <button type="submit" mat-raised-button color="primary" *ngIf="id == 0"
+                                        [disabled]="!f2.valid">Save</button>
+                                    <button type="button" mat-raised-button color="primary" *ngIf="id != 0"
+                                        class="ms-3 me-3">Update</button>
                                 </div>
                             </div>
                         </form>
