--- a/web1/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/web1/src/app/inventory/physical-stock/physical-stock.component.html
@@ -160,8 +160,8 @@
                                                     <th>PurchaseDate</th>
                                                     <th>Quantity</th> -->
                                                 <th>Current Shop</th>
-                                                <th>Status</th>
-                                                <th>Supplier</th>
+                                                <th>ProductStatus</th>
+                                                <!-- <th>Supplier</th> -->
                                                 <!-- <th>Unit Price</th>
                                                     <th>Dis%</th>
                                                     <th>TAX%</th>
@@ -182,8 +182,8 @@
                                                 <td>-</td>
                                                 <td>-</td> -->
                                                 <td>{{ data.ShopName }}</td>
-                                                <td>{{ data.Status }}</td>
-                                                <td>{{ data.SupplierName }}</td>
+                                                <td>{{ data.ProductStatus }}</td>
+                                                <!-- <td>{{ data.SupplierName }}</td> -->
                                                 <!-- <td>-</td>
                                                 <td>-</td>
                                                 <td>-</td>
